# rb-wiki

./: .gitignore  LICENSE  README.md  updates-needed.txt
wiki-template/: .gitignore  AGENTS.md  README.md  TEMPLATE.md  design.md  pyproject.toml  wiki-manifest.yml
wiki-template/.wiki_cache/: graph.json
wiki-template/docs/: AGENT_OPERATIONS.md  AUTHORITY_GRANTS.md  DOMAIN_POLICY_COMPATIBILITY.md
wiki-template/schema/: agent_policy.yml  consequence_policy.yml  domain_policy.yml  ingest_policy.md  link_policy.md  lint_policy.md  migrations.yml  okf_profile.md  page_schema.yml  query_policy.md  source_schema.yml
wiki-template/sources/: _source_registry.yml
wiki-template/tests/: fake_agent_harness.py  test_agent_provenance_contract.py  test_approval_records.py  test_authorised_apply_wrapper.py  test_authority.py  test_authority_identity_binding.py  test_autonomous_apply_scope.py  test_capabilities.py  test_commit_closure.py  test_commit_receipt_contract.py  test_commit_report_linkage.py  test_consequence_policy.py  test_context_root_isolation.py  test_contract_registry_completeness.py  test_controller_lint_read_only.py  test_cron_exception_safety.py  test_cron_run_integration.py  test_declared_inputs.py  test_domain_policy_adapter.py  test_external_check_evidence.py  test_external_check_integrity.py  test_external_session_contention.py  test_fake_agent_scenarios.py  test_frontmatter_yaml_contract.py  test_git_preflight.py  test_graph_cache_integrity.py  test_high_consequence_two_run.py  test_ingest_failure_recovery.py  test_ingest_idempotency.py  test_lock_leases.py  (+40 more)
(+154 files in other folders)
