[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rb-wiki-tools"
version = "0.2.0"
description = "Deterministic safety and maintenance tools for an RB Wiki"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6,<7",
  "jsonschema>=4,<5",
]

[project.optional-dependencies]
test = []

[tool.setuptools]
py-modules = []

